<resources>
    <string name="app_name">布丁音乐</string>
    <string name="button_home">首页</string>
    <string name="button_community">社区</string>
    <string name="button_message">消息</string>
    <string name="button_my">我的</string>
    <string name="account">账号:</string>
    <string name="password">密码:</string>
    <string name="please_input_account">请输入用户名</string>
    <string name="please_input_password">请输入密码</string>
    <string name="login_icon">登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="cb_rm_account">记住账号</string>
    <string name="cb_rm_password">记住密码</string>
    <string name="touristlogin">游客登录</string>
    <string name="more">更多</string>
    <string name="diary">日記</string>
    <string name="note">即使不能交换身体，也要把『我的名字』写进『你的日记』。</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="deleteButton">删除</string>
    <string name="userName">裤子里没库里</string>
    <string name="id">ID：</string>
    <string name="idValue">1040813130</string>
    <string name="sexMan">男</string>
    <string name="Nineteen">19岁</string>
    <string name="vline">|</string>
    <string name="birthday">8月1日</string>
    <string name="constellation">狮子座</string>
    <string name="address">现居：</string>
    <string name="addressValue">广东湛江</string>
    <string name="leadTo">＞</string>
    <string name="comeFromGuangDong">广东</string>
    <string name="qqEmail">1040813130@qq.com</string>
    <string name="personProfile">smile again smile forever</string>
    <string name="paymentCenter">支付中心</string>
    <string name="schedule">待办事项</string>
    <string name="myDiary">我的日记</string>
    <string name="sportRecord">运动记录</string>
    <string name="functionSetting">功能设置</string>
    <string name="softVersion">云村1.0版本</string>
    <string name="Alex">Alex Music</string>
    <string name="Blow">起风了</string>
    <string name="Aua">买辣椒也用卷</string>
    <string name="one">0.25</string>
    <string name="two">-0.25</string>
    <string name="navigation_drawer_open">打开音乐播放列表\n</string>
    <string name="navigation_drawer_close">关闭音乐播放列表\n</string>
</resources>
