<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".diary.AddContent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#99FFC107"
        >
        <Button
            android:id="@+id/addContent_btnBack"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:text="@string/back"
            android:layout_centerVertical="true"
            android:background="@drawable/sharp_button"
            android:layout_marginStart="10dp"
            />

    </RelativeLayout>
    <ImageView
        android:id="@+id/addContent_ivImage"
        android:layout_width="200dp"
        android:layout_height="350dp"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"/>
    <VideoView
        android:id="@+id/addContent_vvVideo"
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/addContent_etText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/note"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/addContent_btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />
        <Button
            android:id="@+id/addContent_btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>