<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E6E6">

    <Button
        android:id="@+id/fragment_my_btn_editInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@null"
        android:text="编辑个人资料" />

    <LinearLayout
        android:id="@+id/fragment_my_ll_head"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="#FFFFFF"
        android:gravity="center">

        <ImageView
            android:id="@+id/fragment_my_iv_headPortrail"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="30dp"
            android:background="@mipmap/curry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="30dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/my_userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userName"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/my_userAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/idValue"
                    android:textSize="15sp" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_my_ll_information"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/fragment_my_ll_head"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/my_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="性别：" />

        <TextView
            android:id="@+id/my_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexMan" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="生日：" />

        <TextView
            android:id="@+id/my_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="星座：" />

        <TextView
            android:id="@+id/my_constellation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/constellation" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_my_ll_address"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/fragment_my_ll_information"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="家乡：" />

        <TextView
            android:id="@+id/my_birthplace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comeFromGuangDong" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/address" />

        <TextView
            android:id="@+id/my_nowLive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:text="@string/addressValue" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/fragment_my_ll_email"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/fragment_my_ll_address"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="邮箱：" />

        <TextView
            android:id="@+id/my_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/qqEmail" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_my_ll_lable"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/fragment_my_ll_email"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="个人介绍" />

        <TextView
            android:id="@+id/my_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/personProfile" />
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_cardView_function"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@id/fragment_my_ll_lable"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <LinearLayout
                    android:id="@+id/fragment_my_ll_pay"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="20dp"
                        android:background="@mipmap/pay" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/paymentCenter"
                        android:textColor="#000000"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fragment_my_ll_schedule"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginLeft="10dp"
                        android:background="@mipmap/schedule" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/schedule"
                        android:textColor="#000000"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <LinearLayout
                    android:id="@+id/fragment_my_ll_diary"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="20dp"
                        android:background="@mipmap/diary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/myDiary"
                        android:textColor="#000000"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fragment_my_ll_record"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="10dp"
                        android:background="@mipmap/record" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/sportRecord"
                        android:textColor="#000000"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <LinearLayout
                    android:id="@+id/fragment_my_ll_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="@mipmap/setting" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/functionSetting"
                        android:textColor="#000000"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_below="@id/fragment_cardView_function"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/softVersion" />
</RelativeLayout>
