<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:gravity="center"
    android:orientation="horizontal"
    android:background="#33EEEEEE">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/ll_home"
        android:orientation="vertical"
        android:gravity="center">
        <ImageButton
            android:id="@+id/ib_tab_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/select_home"
            android:background="#00000000"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_home"
            android:textSize="10sp"
            android:textColor="#A6A6A6"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/ll_community"
        android:orientation="vertical"
        android:gravity="center">
        <ImageButton
            android:id="@+id/ib_tab_community"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/unselect_community"
            android:background="#00000000"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="游戏"
            android:textSize="10sp"
            android:textColor="#A6A6A6"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/ll_message"
        android:orientation="vertical"
        android:gravity="center">
        <ImageButton
            android:id="@+id/ib_tab_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/unselect_message"
            android:background="#00000000"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_message"
            android:textSize="10sp"
            android:textColor="#A6A6A6"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/ll_my"
        android:orientation="vertical"
        android:gravity="center">

        <ImageButton
            android:id="@+id/ib_tab_my"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:src="@drawable/unselect_my" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_my"
            android:textSize="10sp"
            android:textColor="#A6A6A6"/>
    </LinearLayout>
</LinearLayout>
