<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".activity.LoginActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="329dp"
        android:src="@mipmap/login"
        android:scaleType="fitXY"
        tools:ignore="ContentDescription"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:background="@drawable/shape_login_form"
            android:paddingLeft="43dp"
            android:paddingRight="31dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="278dp"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:paddingStart="43dp"
            android:paddingEnd="31dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/account"
                    tools:ignore="ContentDescription"/>
                <EditText
                    android:id="@+id/register_et_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:hint="@string/please_input_account"
                    android:textColorHint="#bcbcbc"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:background="@null"
                    android:layout_marginStart="20dp"
                    android:inputType="text" />
            </LinearLayout>
            <View
                android:layout_marginTop="23dp"
                android:layout_marginBottom="23dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divide"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/password"
                    tools:ignore="ContentDescription"/>
                <EditText
                    android:id="@+id/register_et_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:hint="@string/please_input_password"
                    android:textColorHint="#bcbcbc"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:layout_marginStart="20dp" />
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/register_btn_register"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="67dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/shape_register_btn"
            android:text="@string/register"
            android:textSize="24sp"
            android:textColor="@color/white"/>
    </LinearLayout>

</RelativeLayout>